added enchantments for extractor content

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2083,6 +2083,16 @@
   "tetra.advancements.spelunking.containers.description": "Hit the highlighted areas on crates and containers with the correct tools to break them open",
   "tetra.advancements.spelunking.chthonic_extractor.title": "Deep Extraction",
   "tetra.advancements.spelunking.chthonic_extractor.description": "Find a chthonic extractor in a crate or a container",
+  "tetra.advancements.spelunking.chthonic_automation.title": "Automated Extraction",
+  "tetra.advancements.spelunking.chthonic_automation.description": "Place a forge hammer above an extractor and power it with redstone to automatically hammer it into the bedrock",
+  "tetra.advancements.spelunking.chthonic_cooldown.title": "Natural Cooldown",
+  "tetra.advancements.spelunking.chthonic_cooldown.description": "Pour water on an extractor or let it sit for a while to avoid taking fire damage when picking it up",
+  "tetra.advancements.spelunking.chthonic_crossbow.title": "Unintended Use, Warranty Void",
+  "tetra.advancements.spelunking.chthonic_crossbow.description": "Fire a chthonic extractor using a crossbow with high draw strength\n\n§7Hold the extractor in the offhand to load",
+  "tetra.advancements.spelunking.chthonic_hammer.title": "Manual Extraction",
+  "tetra.advancements.spelunking.chthonic_hammer.description": "Place a chthonic extractor on bedrock and hit the top with a hammer",
+  "tetra.advancements.spelunking.chthonic_module.title": "Repurposed Extractor",
+  "tetra.advancements.spelunking.chthonic_module.description": "Replace the right head of a double headed tool with a chthonic extractor for a powerful harvesting tool\n\n§7* The extractor has to be unused\n* Unlike other artifacts found in the ruins this cannot be repaired with metal scrap",
   "tetra.advancements.spelunking.earthpiercer.title": "Planetary Piercing",
   "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer in a container and attach it to a handle, the earthpiercer can break several blocks in a line",
   "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
@@ -2150,15 +2160,15 @@
   "tetra.advancements.upgrades.sword_integrity.description": "Upgrade a sword's hilt or strengthen the sword with a binding to increase its integrity",
   "tetra.advancements.upgrades.sword_upgrade.title": "Cutting a New One",
   "tetra.advancements.upgrades.sword_upgrade.description": "Place a vanilla sword in a workbench and upgrade it",
-  "tetra.advancements.upgrades.toolbelt.title": "Stay Hip",
-  "tetra.advancements.upgrades.toolbelt.description": "Find a way to easily access your tools",
-  "tetra.advancements.upgrades.toolbelt_upgraded.title": "Wrapped Up",
+  "tetra.advancements.upgrades.toolbelt.title": "Simple Utilities",
+  "tetra.advancements.upgrades.toolbelt.description": "Craft a very basic toolbelt from four pieces of string",
+  "tetra.advancements.upgrades.toolbelt_upgraded.title": "Shulker Inlays",
   "tetra.advancements.upgrades.toolbelt_upgraded.description": "Fully upgrade a toolbelt",
   "tetra.advancements.upgrades.tool_upgrade.title": "Getting Another Upgrade",
   "tetra.advancements.upgrades.tool_upgrade.description": "Place a vanilla tool such as a pickaxe, axe or a hoe in a workbench and upgrade it",
   "tetra.advancements.upgrades.workbench.title": "Bench mk II",
   "tetra.advancements.upgrades.workbench.description": "Upgrade a crafting table by right-clicking it with a mallet",
-  "tetra.advancements.upgrades.rack.title": "Hang Loose",
+  "tetra.advancements.upgrades.rack.title": "Within Reach",
   "tetra.advancements.upgrades.rack.description": "Place a rack near a workbench for easy access to your tools",
 
   "tetra.improvement.destabilized/haunted.name": "§5Destabilized: Haunted",
