--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -298,6 +298,9 @@
   "tetra.stats.earthbind": "Earthbind",
   "tetra.stats.earthbind.tooltip": "Hitting an entity has a §e10%%§r chance to lock it in place for §e%s seconds§r. Occurs more often at lower y-levels, up to a §e50%%§r chance at bedrock",
 
+  "tetra.stats.manaRepair": "Mana rep",
+  "tetra.stats.manaRepair.tooltip": "This item will use mana to repair itself over time, repairing one point of durability costs §e%s§r mana",
+
   "tetra.stats.magicCapacity": "Magic capacity",
   "tetra.stats.magicCapacity.tooltip": "The amount of magic that the module may hold, this capacity is utilized by improvement such as enchantments.\n \n§7Magic capacity: §e%s",
 
@@ -476,7 +479,21 @@
   "tetra.material.sky": "Sky metal",
   "tetra.material.sky.prefix": "Skyseeker's",
   "tetra.improvement.naturesaura_aura_mending_innate.name": "Aura Mend",
-  "tetra.improvement.naturesaura_aura_mending_innate.description": "The item will repair itself using aura",
+  "tetra.improvement.naturesaura_aura_mending_innate.description": "The item will repair itself over time using aura",
+  "tetra.material.manasteel": "Manasteel",
+  "tetra.material.manasteel.prefix": "Manasteel",
+  "tetra.material.elementium": "Elementium",
+  "tetra.material.elementium.prefix": "Elementium",
+  "tetra.material.terrasteel": "Terrasteel",
+  "tetra.material.terrasteel.prefix": "Terrasteel",
+  "tetra.material.livingwood": "Livingwood",
+  "tetra.material.livingwood.prefix": "Livingwood",
+  "tetra.material.dreamwood": "Dreamwood",
+  "tetra.material.dreamwood.prefix": "Dreamwood",
+  "tetra.material.mana_string": "Mana string",
+  "tetra.material.mana_string.prefix": "Mana string",
+  "tetra.improvement.mana_repair.name": "Mana repair",
+  "tetra.improvement.mana_repair.description": "The item will repair itself over time using mana",
 
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
@@ -828,6 +845,8 @@
   "tetra.variant.sword_socket/pristine_emerald.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and provides magical boons to the wielder of the sword.\n \nThe gem is of pristine quality and provides improved effects compared to a gem of lesser quality.",
   "tetra.variant.sword_socket/pristine_lapis": "Socket [§9Lapis+§r]",
   "tetra.variant.sword_socket/pristine_lapis.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and provides magical boons to the wielder of the sword.\n \nThe gem is of pristine quality and provides improved effects compared to a gem of lesser quality.",
+  "tetra.variant.sword_socket/mana_rune": "Socket [§dMana§r]",
+  "tetra.variant.sword_socket/mana_rune.description": "A rune, fitted onto the sword where the blade meets the hilt. The rune uses mana to repair the item over time.",
 
   "tetra/schematic/sword/counterweight.name": "Counterweight",
   "tetra/schematic/sword/counterweight.description": "Balance the blade with a counterweight. Increases the attack speed by §f0.15§r, this bonus is reduced by §f0.05§r for each point of difference between the total integrity use and the effect level.\n \nMaterial §fhardness§r increase the level of the effect.",
@@ -1116,6 +1135,8 @@
   "tetra.variant.double_socket/pristine_emerald.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tool's wielder.\n \nThe gem is of pristine quality and provides increased effects.",
   "tetra.variant.double_socket/pristine_lapis": "Socket [§9Lapis+§r]",
   "tetra.variant.double_socket/pristine_lapis.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and provides magical boons to the tool's wielder.\n \nThe gem is of pristine quality and provides increased effects.",
+  "tetra.variant.double_socket/mana_rune": "Socket [§dMana§r]",
+  "tetra.variant.double_socket/mana_rune.description": "A rune, fitted onto the side of the tool head. The rune uses mana to repair the item over time.",
 
   "tetra/schematic/double/binding.name": "Binding",
   "tetra/schematic/double/binding.description": "Bind the tool head to the handle by binding it with rope or straps, or by using completely different materials and methods.",
@@ -1324,6 +1345,8 @@
   "tetra.variant.single_socket/pristine_emerald.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.\n \nThe gem is of pristine quality and provides increased effects.",
   "tetra.variant.single_socket/pristine_lapis": "Socket [§9Lapis+§r]",
   "tetra.variant.single_socket/pristine_lapis.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.\n \nThe gem is of pristine quality and provides increased effects.",
+  "tetra.variant.single_socket/mana_rune": "Socket [§dMana§r]",
+  "tetra.variant.single_socket/mana_rune.description": "A rune, attached where the head meets the handle. The rune uses mana to repair the item over time.",
 
   "tetra/schematic/single/binding.name": "Binding",
   "tetra/schematic/single/binding.description": "Bind the tool head to the handle by binding it with rope or straps, or by using completely different materials and methods.",
