added magic cap hone schematic

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -597,7 +597,7 @@
   "item.tetra.scroll.single/points_end.name": "Point's End",
   "item.tetra.scroll.single/points_end.description": "Schematics for a spearhead that's capable of drawing power from several types of spherical objects",
   "item.tetra.scroll.hone_gild.prefix": "Hone",
-  "item.tetra.scroll.hone_gild.name": "Gilding",
+  "item.tetra.scroll.hone_gild.name": "Gild",
   "item.tetra.scroll.hone_gild.description": "",
   "item.tetra.scroll.arcane_repair.name": "Arcane Repair",
   "item.tetra.scroll.arcane_repair.description": "",
@@ -1064,6 +1064,25 @@
   "tetra.module.sword/throwing_knife.description": "A well-balanced blade that is suitable for throwing.",
   "tetra.module.sword/throwing_knife.material_name": "%s throwing knife",
   "tetra.module.sword/throwing_knife.prefix": "%s",
+
+  "tetra/schematic/shared/hone_gild_1.name": "Hone: Gild I",
+  "tetra/schematic/shared/hone_gild_1.description": "Increase the magic capacity of the module using a few nuggets of gold and an infusion of experience.",
+  "tetra/schematic/shared/hone_gild_1.slot1": "Gold nuggets",
+  "tetra/schematic/shared/hone_gild_2.name": "Hone: Gild II",
+  "tetra/schematic/shared/hone_gild_2.description": "Further increase the magic capacity of the module.",
+  "tetra/schematic/shared/hone_gild_2.slot1": "Gold nuggets",
+  "tetra/schematic/shared/hone_gild_3.name": "Hone: Gild III",
+  "tetra/schematic/shared/hone_gild_3.description": "Further increase the magic capacity of the module.",
+  "tetra/schematic/shared/hone_gild_3.slot1": "Gold nuggets",
+  "tetra/schematic/shared/hone_gild_4.name": "Hone: Gild IV",
+  "tetra/schematic/shared/hone_gild_4.description": "Further increase the magic capacity of the module.",
+  "tetra/schematic/shared/hone_gild_4.slot1": "Gold nuggets",
+  "tetra/schematic/shared/hone_gild_5.name": "Hone: Gild V",
+  "tetra/schematic/shared/hone_gild_5.description": "Further increase the magic capacity of the module.",
+  "tetra/schematic/shared/hone_gild_5.slot1": "Gold nuggets",
+
+  "tetra.improvement.hone_gild.name": "Hone: Gilded",
+  "tetra.improvement.hone_gild.description": "Increases magic capacity of the module",
 
   "tetra/schematic/double/shared_head/hone_durability_1.name": "Hone: Durability I",
   "tetra/schematic/double/shared_head/hone_durability_1.description": "Hone the module to increase the durability it provides.",
