added description for gild scroll

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -598,12 +598,10 @@
   "item.tetra.scroll.single/points_end.description": "Schematics for a spearhead that's capable of drawing power from several types of spherical objects",
   "item.tetra.scroll.hone_gild.prefix": "Hone",
   "item.tetra.scroll.hone_gild.name": "Gild",
-  "item.tetra.scroll.hone_gild.description": "",
-  "item.tetra.scroll.arcane_repair.name": "Arcane Repair",
-  "item.tetra.scroll.arcane_repair.description": "",
+  "item.tetra.scroll.hone_gild.description": "An enchanted scroll that makes it possible to hone the magic capacity of a module",
   "item.tetra.scroll.double/warforge.prefix": "Schematic",
   "item.tetra.scroll.double/warforge.name": "Warforge",
-  "item.tetra.scroll.double/warforge.description": "Plans on how to modify double headed tools to be much more effective in combat",
+  "item.tetra.scroll.double/warforge.description": "Contains various plans on how to modify different types of double headed tools to be much more effective in combat",
 
   "item.tetra.scroll.effects": "Crafting Effect",
   "item.tetra.scroll.effects.description": "Provides some form of effect when tool parts are crafted or modified in a nearby workbench",
